resolve a pmd violation